# axum-practice-2024

./: .gitignore  .pre-commit-config.yaml  Cargo.toml
examples/practice0/: Cargo.toml  Makefile
examples/practice0/src/: handlers.rs  lib.rs  main.rs
examples/practice1/: Cargo.toml  Makefile  aarch64-gnu.Dockerfile  aarch64-musl.Dockerfile  compose-aarch64-gnu.yaml  compose-aarch64-musl.yaml  compose-x86_64-gnu.yaml  compose-x86_64-musl.yaml  compose.yaml  x86_64-gnu.Dockerfile  x86_64-musl.Dockerfile
examples/practice1/prometheus/: prometheus.yml
examples/practice1/src/: handlers.rs  lib.rs  main.rs
examples/practice1/src/handlers/: post_json_example.rs  reqwest_example.rs
examples/practice1/src/utils/: validation.rs
src/: main.rs
